--- a/index.html
+++ b/index.html
@@ -16,24 +16,27 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark stick-top">
 	<div class="container-fluid">
-		<a href="#" class="navbar-brand">Test</a>
+		<a href="#" class="navbar-brand">Portfolio</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id=navbarResponsive>
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a href="#" class="nav-link"><u>Home</u></a>
+				</li>
+				<li class="nav-item">
+					<a href="about.html" class="nav-link"><u>About</u></a>
+				</li>
+				<li class="nav-item">
+					<a href="contact.html" class="nav-link"><u>Contact</u></a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link disabled"><u>Under Construction</u></a>
+				</li>
+			</ul>
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item">
-					<a href="#" class="nav-link">Home</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link">About</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link">Contact</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link">Disabled</a>
-				</li>
+				<button class="btn btn-outline-success">Login</button>
 			</ul>
 		</div>
 	</div>
@@ -48,32 +51,40 @@
 	</ul>
 <div class="carousel-inner">
 	<div class="carousel-item active">
-		<img src="img/background2resize.jpg">
+		<img src="img/background2resize.jpg" alt="test1">
 		<div class="carousel-caption">
-			<h1 class="display-2">Testing</h1>
-			<h3>Test2</h3>
-			<button type="button" class="btn btn-outline-light btn-lg">TestBtn</button>
-			<button type="button" class="btn btn-primary btn-lg">TestBtn2</button>
+			<h1 class="display-2">Welcome</h1>
+			<h3>to my portfolio</h3>
+			<!-- <button type="button" class="btn btn-outline-light btn-lg">TestBtn</button>
+			<button type="button" class="btn btn-primary btn-lg">TestBtn2</button> -->
 		</div>
 	</div>
 	<div class="carousel-item">
-		<img src="img/background3resize.jpg">
+		<img src="img/background3resize.jpg" alt="Test">
 	</div>
 	<div class="carousel-item">
 		<img src="img/background4resize.jpg">
 	</div>
 </div>
+	<a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	  </a>
 </div>
 
 <!--- Jumbotron -->
 <div class="container-fluid">
 	<div class="row jumbotron">
-		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p class="lead">Lorem Ipsum stuff here.</p>
+		<div class="col-12 text-center">
+			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum velit id tortor efficitur condimentum. Phasellus auctor massa vitae rutrum egestas. Nullam rhoncus lacus at neque cursus imperdiet.</p>
 		</div>
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-			<a href="#"><button type="button" class="btn btn-outline-secondary">TestButtonP</button></a>
-		</div>
+		<!-- <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+			<a href="#"><button type="button" class="btn btn-outline-secondary">More about this website</button></a>
+		</div> -->
 	</div>
 </div>
 
@@ -81,7 +92,7 @@
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
 		<div class="col-12">
-			<h1 class="display-4">Lorem Ipsum</h1>
+			<h1 class="display-4">About</h1>
 		</div>
 	</div>
 </div>
