--- a/index.html
+++ b/index.html
@@ -77,22 +77,23 @@
 </div>
 
 <!--- Jumbotron -->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
 	<div class="row jumbotron">
 		<div class="col-12 text-center">
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vestibulum velit id tortor efficitur condimentum. Phasellus auctor massa vitae rutrum egestas. Nullam rhoncus lacus at neque cursus imperdiet.</p>
+			<p class="lead"></p>
 		</div>
-		<!-- <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
 			<a href="#"><button type="button" class="btn btn-outline-secondary">More about this website</button></a>
-		</div> -->
+		</div>
 	</div>
-</div>
+</div> -->
 
 <!--- Welcome Section -->
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
 		<div class="col-12">
-			<h1 class="display-4">About</h1>
+			<hr>
+			<h1 class="display-4"></h1>
 		</div>
 	</div>
 </div>
