--- a/contact.html
+++ b/contact.html
@@ -45,35 +45,52 @@
 <!--- Image Slider -->
 
 <!--- Jumbotron -->
+<!-- <div class="container-fluid">
+	<div class="row jumbotron">
+		<div class="col-12 text-center">
+			<p class="lead"></p>
+		</div>
+		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+			<a href="#"><button type="button" class="btn btn-outline-secondary">More about this website</button></a>
+		</div>
+	</div>
+</div> -->
 
 <!--- Welcome Section -->
 
-<!--- Three Column Section -->
-
-
-<!--- Two Column Section -->
-
-
-<!--- Fixed background -->
-
-
-<!--- Emoji Section -->
-
-  
-<!--- Meet the team -->
-
-
-<!--- Cards -->
-
-
-<!--- Two Column Section -->
-
-
 <!--- Connect -->
-
+<div class="container-fluid padding">
+	<div class="row text-center padding">
+		<div class="col-12">
+			<h2><u>Connect</u></h2>
+		</div>
+		<div class="col-12 social padding">
+			<a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+			<a href="https://youtube.com/"><i class="fab fa-youtube"></i></a>
+			<a href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
+			<a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
+		</div>
+	</div>
+</div>
 
 <!--- Footer -->
-
+<footer>
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-12 text-center">
+				<h1>Jeffrey Taylor</h1>
+				<hr class="light">
+				<p>555-555-555</p>
+				<p>jeffreyt101@gmail.com</p>
+				<p>Phoenix, AZ</p>
+			</div>
+			<div class="col-12">
+			<hr class="light">
+			<p>©Jeffrey Taylor</p>
+			</div>
+		</div>
+	</div>
+</footer>
 
 </body>
 </html>
