--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 	<div class="carousel-item active">
 		<img src="img/background2resize.jpg" alt="test1">
 		<div class="carousel-caption">
-			<h1 class="display-2">Welcome</h1>
-			<h3>to my portfolio</h3>
+			<h1 class="display-2"><u>Welcome</u></h1>
+			<h3>to my digital portfolio</h3>
 			<!-- <button type="button" class="btn btn-outline-light btn-lg">TestBtn</button>
 			<button type="button" class="btn btn-primary btn-lg">TestBtn2</button> -->
 		</div>
@@ -91,39 +91,46 @@
 <!--- Welcome Section -->
 <div class="container-fluid padding">
 	<div class="row welcome text-center">
-		<div class="col-12">
+		<div class="col-12 welcomesection padding">
+			<p>This is my digital portfolio, a place for me to store work Ive done online. <br> To see my projects, go to the projects tab in the nav bar.</p>
 			<hr>
-			<h1 class="display-4"></h1>
 		</div>
 	</div>
 </div>
 
-<!--- Three Column Section -->
-
-
-<!--- Two Column Section -->
-
-
-<!--- Fixed background -->
-
-
-<!--- Emoji Section -->
-
-  
-<!--- Meet the team -->
-
-
-<!--- Cards -->
-
-
-<!--- Two Column Section -->
-
-
 <!--- Connect -->
-
+<div class="container-fluid padding">
+	<div class="row text-center padding">
+		<div class="col-12">
+			<h2><u>Connect</u></h2>
+		</div>
+		<div class="col-12 social padding">
+			<a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+			<a href="https://youtube.com/"><i class="fab fa-youtube"></i></a>
+			<a href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
+			<a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
+		</div>
+	</div>
+</div>
 
 <!--- Footer -->
-
+<footer>
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-12 text-center">
+				<h1>Jeffrey Taylor</h1>
+				<hr class="light">
+				<p>555-555-555</p>
+				<p>jeffreyt101@gmail.com</p>
+				<p>Phoenix, AZ</p>
+			</div>
+			<div class="col-12">
+			<hr class="light">
+			<p>©Jeffrey Taylor</p>
+			</div>
+		</div>
+	</div>
+</footer>
 
 </body>
 </html>
