--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark stick-top">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 	<div class="container-fluid">
 		<a href="#" class="navbar-brand">Portfolio</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
