--- a/login.html
+++ b/login.html
@@ -1,92 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CIS105 Project</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="style.css" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="">
 
-<!-- Navigation -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark stick-top">
-	<div class="container-fluid">
-		<a href="#" class="navbar-brand">Portfolio</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id=navbarResponsive>
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<a href="index.html" class="nav-link"><u>Home</u></a>
-				</li>
-				<li class="nav-item">
-					<a href="about.html" class="nav-link"><u>About</u></a>
-				</li>
-				<li class="nav-item">
-					<a href="contact.html" class="nav-link"><u>Contact</u></a>
-				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link disabled"><u>Under Construction</u></a>
-				</li>
-			</ul>
-			<ul class="navbar-nav ml-auto">
-				<a href="login.html" class="btn btn-outline-success">Login</button></a>
-			</ul>
-		</div>
-	</div>
-</nav>
+    <title>Signin Template for Bootstrap</title>
 
-<!--- Image Slider -->
+    <!-- Bootstrap core CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
-<!--- Jumbotron -->
+    <!-- Custom styles for this template -->
+    <link href="signin.css" rel="stylesheet">
+  </head>
 
-<!--- Welcome Section -->
-
-<!--- Three Column Section -->
-
-
-<!--- Two Column Section -->
-
-
-<!--- Fixed background -->
-
-
-<!--- Emoji Section -->
-
-  
-<!--- Meet the team -->
-
-
-<!--- Cards -->
-
-
-<!--- Two Column Section -->
-
-
-<!--- Connect -->
-
-
-<!--- Footer -->
-
-
-</body>
+  <body class="text-center">
+    <form class="form-signin">
+      <img class="mb-4" src="" alt="" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+      <label for="inputEmail" class="sr-only">Email address</label>
+      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+	  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	  <a href="index.html" class="btn btn-lg btn-warning btn-block">Home</a>
+      <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+	</form>
+  </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
