Final Touches - polish

--- a/about.html
+++ b/about.html
@@ -56,8 +56,26 @@
 	</div>
 </div> -->
 
-<!--- Welcome Section -->
+<!--- Main Section -->
+<div class="container-fluid mainsection padding">
+	<div class="row text-center padding">
+		<div class="col-xs-12 col-sm-6 col-md-4">
 
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-4 mainsectiontext">
+			<img src="img/bootstrap-logo.png" alt="" height="94" width="100">
+			<br>
+			<br>
+			<h1><u>About This Website</u></h1>
+			<br>
+			<p>This website was built as a project for my CIS105 class. The website is built almost entirely from scratch, using html5, and Bootstrap.</p>
+			<br>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-4">
+
+		</div>
+	</div>
+</div>
 <!--- Connect -->
 <div class="container-fluid padding">
 	<div class="row text-center padding">
