--- a/contact.html
+++ b/contact.html
@@ -42,21 +42,32 @@
 	</div>
 </nav>
 
-<!--- Image Slider -->
-
-<!--- Jumbotron -->
-<!-- <div class="container-fluid">
-	<div class="row jumbotron">
-		<div class="col-12 text-center">
-			<p class="lead"></p>
-		</div>
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-			<a href="#"><button type="button" class="btn btn-outline-secondary">More about this website</button></a>
+<!-- Contact Form -->
+<div class="container-fluid mainsection padding">
+<div class="row padding text-center">
+	<div class="col-xs-12 col-sm-6">
+		<div class="map">
+			<br>
+			<iframe width="95%" height="700" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=33.2955%2C-111.7952&key=AIzaSyBgmhvWj6p15o6PkvyKxMdGQcrA74SiXAc" allowfullscreen></iframe>		
 		</div>
 	</div>
-</div> -->
-
-<!--- Welcome Section -->
+	<div class="col-xs-12 col-sm-6 contactform">
+		<br>
+		<h1 class="title">Contact</h1>
+		<form action="">
+			<input type="text" name="name" placeholder="Your Name" id="nameform"/>
+			<br>
+			<input type="email" name="e-mail" placeholder="Your E-mail Adress" id="email"/>
+			<br>
+			<input type="tel" name="phone" placeholder="Your Phone Number" id="phone"/>
+			<br>
+			<textarea name="text" id="message" rows="8" placeholder="Your Message"></textarea>
+			<br>
+			<button class="btn-send">Submit</button>
+		</form>	
+	</div>	
+</div>
+</div>
 
 <!--- Connect -->
 <div class="container-fluid padding">
