--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
 </div> -->
 
 <!--- Welcome Section -->
-<div class="container-fluid padding">
+<div class="container-fluid blankspaceindex padding">
 	<div class="row welcome text-center">
 		<div class="col-12 welcomesection padding">
+			<br>
 			<p>This is my digital portfolio, a place for me to store work Ive done online. <br> To see my projects, go to the projects tab in the nav bar.</p>
 			<hr>
 		</div>
